plugins {
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id "org.flywaydb.flyway" version "9.0.1"
    id 'java'
}

group = 'ru.baranova.spring'
version = '2022.07-SNAPSHOT'
sourceCompatibility = '17'

ext{
    versionLombok = '1.18.24'
    versionSpringShell = '2.0.1.RELEASE'
    versionAspectJ = '1.9.1'
}

dependencies {
    // Spring
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.shell:spring-shell-starter:2.1.0'
    implementation 'org.springframework:spring-aop'

    // AspectJ
    implementation "org.aspectj:aspectjrt:$versionAspectJ"
    implementation "org.aspectj:aspectjweaver:$versionAspectJ"

    // Fix warning unknown enum constant When.MAYBE
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    // Data
    implementation 'org.postgresql:postgresql:42.3.6'
    implementation "org.flywaydb:flyway-core"

    // Annotation
    compileOnly "org.projectlombok:lombok:$versionLombok"
    annotationProcessor "org.projectlombok:lombok:$versionLombok"

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2:2.1.214'
    testImplementation "org.flywaydb:flyway-core"
    testCompileOnly "org.projectlombok:lombok:$versionLombok"
    testAnnotationProcessor "org.projectlombok:lombok:$versionLombok"
}

tasks.named('test') {
    useJUnitPlatform()
}

apply from:  'flyway.gradle'